style: fix z-index in header

--- a/packages/mz-client/src/styles/Modal.module.scss
+++ b/packages/mz-client/src/styles/Modal.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   left: 50%;
   top: 50%;
+  z-index: 4;
   transform: translate(-50%, -50%);
 
   &.fullWidth {
