--- a/packages/mz-client/src/styles/Overlay.module.scss
+++ b/packages/mz-client/src/styles/Overlay.module.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 3;
   height: -webkit-fill-available;
   // width: 100vh;
   // height: 100vh;
