--- a/packages/mz-client/src/styles/RegionCategorySelector.module.scss
+++ b/packages/mz-client/src/styles/RegionCategorySelector.module.scss
@@ -22,7 +22,7 @@
 
   .left_arrow,
   .right_arrow {
-    z-index: 999;
+    z-index: 1;
     position: absolute;
     height: 100%;
     width: 100px;
