--- a/packages/mz-client/src/styles/UserMenu.module.scss
+++ b/packages/mz-client/src/styles/UserMenu.module.scss
@@ -9,7 +9,7 @@
   border-radius: 4px;
   // box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
-  z-index: 1;
+  z-index: 5;
 }
 
 .menu_item {
